--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 								<a href="mailto:stephanmaree@gmail.com">Email</a>
 							</li>
 							<li>
-								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
+								<a href="SM-cv.pdf" target="_blank">View Résumé</a>
 							</li>
 						</ul>
 
@@ -93,6 +93,9 @@
 						<h3>LIFE THINGS</h3>
 
 						<ul>
+							<li>
+								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
+							</li>
 
 							<li>
 								<a href="https://www.youtube.com/user/JamieOliver" target="_blank">FoodTube</a>
@@ -100,9 +103,7 @@
 							<li>
 								<a href="https://www.mytravelmap.xyz/?2#_=_" target="_blank">Travel Map</a>
 							</li>
-							<li>
-								<a href="https://yogawithadriene.com/" target="_blank">Mindfulness</a>
-							</li>
+							
 
 						</ul>
 
