--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
 
 						<ul>
 							<li>
+								<a href="https://www.linkedin.com/in/stephan-maree-45097b9a/" target="_blank">LinkedIn</a>
+							</li>
+							<li>
 								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
 							</li>
 
-							<li>
-								<a href="https://www.youtube.com/user/JamieOliver" target="_blank">FoodTube</a>
-							</li>
+						
 							<li>
 								<a href="https://www.mytravelmap.xyz/?2#_=_" target="_blank">Travel Map</a>
 							</li>
