--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
 
-	<title>S.M | Jnr Web Developer</title>
+	<title>Web Developer</title>
 
 	<!-- Favicon -->
 	<link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32">
@@ -36,17 +36,17 @@
 
 					<h1>Stephan Maree</h1>
 
-					<span class="tagline">Web Developer. Eater. Laugher.</span>
+					<span class="tagline">Web Developer.
+					</span>
 
 				</div>
 
 				<div class="split-bio">
 
-					<p>Web Development and cooking gets me out of bed.</br> Good coffee and fresh air makes me smile. </br> Learning something
-						new keeps me going.</p>
+					<p>Every day I get to open my laptop and learn something new about Web Development. I am very privileged.
+					</p>
 					</br>
-					<p>My work friends: HTML5, CSS3, SASS, JavaScript, jQuery, Express.js, mongoDB. Node.js and React.js are new friends of
-						mine. </p>
+					<p>My work friends: HTML5, CSS3, SASS, JavaScript, jQuery, Express.js, mongoDB, react.js, Node.js and Git.</p>
 				</div>
 
 				<div class="split-lists">
@@ -57,10 +57,12 @@
 
 						<ul>
 							<li>
+
 								<a href="https://github.com/mareestephan" target="_blank">GitHub</a>
 							</li>
 							<li>
-								<a href="mailto:stephanmaree@gmail.com">Email</a>
+								<a href="https://www.linkedin.com/in/stephan-maree-45097b9a/" target="_blank">LinkedIn</a>
+
 							</li>
 							<li>
 								<a href="SM-cv.pdf" target="_blank">View Résumé</a>
@@ -94,17 +96,19 @@
 
 						<ul>
 							<li>
-								<a href="https://www.linkedin.com/in/stephan-maree-45097b9a/" target="_blank">LinkedIn</a>
+								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
+
 							</li>
 							<li>
-								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
+								<a href="mailto:stephanmaree@gmail.com">Email</a>
+
 							</li>
 
-						
+
 							<li>
-								<a href="https://www.mytravelmap.xyz/?2#_=_" target="_blank">Travel Map</a>
+								<a href="https://www.mytravelmap.xyz/u/fb10155404516487115" target="_blank">Travel Map</a>
 							</li>
-							
+
 
 						</ul>
 
