changed photo and text

--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
 
 				<div class="split-bio">
 
-					<p>Every day I get to open my laptop and learn something new about Web Development. I am very privileged.
+					<p>Every day I get to open my laptop and learn something new about Web Development. It is such a privilege. I love every
+						minute, the struggles, the successes, even hunting for bugs.
 					</p>
 					</br>
-					<p>My work friends: HTML5, CSS3, SASS, JavaScript, jQuery, Express.js, mongoDB, react.js, Node.js and Git.</p>
+					<p>My work friends - HTML5, CSS3, SASS, JavaScript, jQuery, Express.js, mongoDB, React.js, Node.js, Wordpress and Git.</p>
 				</div>
 
 				<div class="split-lists">
@@ -103,7 +104,6 @@
 								<a href="mailto:stephanmaree@gmail.com">Email</a>
 
 							</li>
-
 
 							<li>
 								<a href="https://www.mytravelmap.xyz/u/fb10155404516487115" target="_blank">Travel Map</a>
