landing page coming soon

--- a/index.html
+++ b/index.html
@@ -1,128 +1,33 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 
 <head>
-
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-
-	<title>Web Developer</title>
-
-	<!-- Favicon -->
-	<link rel="icon" type="image/png" href="images/favicon.png" sizes="32x32">
-
-	<!-- Styles -->
-	<link rel='stylesheet' href='assets/css/split.css' type='text/css' media='screen' />
-	<meta name="viewport" content="width=device-width,initial-scale=1" />
-
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>S. Maree | Web Developer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <script src="main.js"></script>
 </head>
 
-<body id="fullsingle" class="page-template-page-fullsingle-split">
-
-	<div class="fs-split">
-
-		<!-- Image Side -->
-		<div class="split-image">
-
-		</div>
-
-		<!-- Content Side -->
-		<div class="split-content">
-
-			<div class="split-content-vertically-center">
-
-				<div class="split-intro">
-
-					<h1>Stephan Maree</h1>
-
-					<span class="tagline">Web Developer.
-					</span>
-
-				</div>
-
-				<div class="split-bio">
-
-					<p>Every day I get to open my laptop and learn something new about Web Development. It is such a privilege. I love every
-						minute, the struggles, the successes, even hunting for bugs.
-					</p>
-					</br>
-					<p>My work friends - HTML5, CSS3, SASS, JavaScript, jQuery, Express.js, mongoDB, React.js, Node.js, Wordpress and Git.</p>
-				</div>
-
-				<div class="split-lists">
-
-					<div class="split-list">
-
-						<h3>Connect</h3>
-
-						<ul>
-							<li>
-
-								<a href="https://github.com/mareestephan" target="_blank">GitHub</a>
-							</li>
-							<li>
-								<a href="https://www.linkedin.com/in/stephan-maree-45097b9a/" target="_blank">LinkedIn</a>
-
-							</li>
-							<li>
-								<a href="SM-cv.pdf" target="_blank">View Résumé</a>
-							</li>
-						</ul>
-
-					</div>
+<body>
+    <div id="desktop">
+        <div class="bgimg">
 
 
 
-					<div class="split-list">
+        </div>
+    </div>
+    <div class="middle">
+        <h1>COMING SOON</h1>
+        <hr>
 
-						<h3>DEV STUFF</h3>
-
-						<ul>
-							<li>
-								<a href="https://wesbos.com/" target="_blank">Wes Bos</a>
-							</li>
-							<li>
-								<a href="https://www.coderbyte.com/challenges/" target="_blank">Coderbyte</a>
-							</li>
-							<li>
-								<a href="https://www.codewars.com/" target="_blank">CodeWars</a>
-							</li>
-						</ul>
-
-					</div>
-					<div class="split-list">
-
-						<h3>LIFE THINGS</h3>
-
-						<ul>
-							<li>
-								<a href="https://www.instagram.com/stephanmaree5/" target="_blank">Instagram</a>
-
-							</li>
-							<li>
-								<a href="mailto:stephanmaree@gmail.com">Email</a>
-
-							</li>
-
-							<li>
-								<a href="https://www.mytravelmap.xyz/u/fb10155404516487115" target="_blank">Travel Map</a>
-							</li>
-
-
-						</ul>
-
-					</div>
-
-				</div>
+        <div id="time"></div>
+        <p>Exciting stuff.</p>
+    </div>
 
 
 
-			</div>
-
-		</div>
-
-	</div>
 
 </body>
 
